--- a/templates/includes/files_navbar.html
+++ b/templates/includes/files_navbar.html
@@ -4,14 +4,11 @@
 <link rel="stylesheet" type="text/css" href="{% static 'css/files_navbar.css' %}">
 
 <div class="top-navbar">
-  <!--<button class="hamburger" id="hamburger"><i class="fas fa-bars"></i></button>-->
-
-
   <div class="hamburger" id="hamburger">
     <i class="fa-solid fa-bars"></i>
   </div>
 
-  <div class="logo">Blue River Technology Solutions</div>
+  <div class="logo">BRITS</div>
 
   <div class="search-bar">
     <i class="fas fa-search"></i>
@@ -24,15 +21,7 @@
         <img src="{{ user.profile.avatar.url }}" alt="User Avatar">
       {% else %}
         <div class="avatar-initials">
-          {% with user.get_full_name|default:user.username as full_name %}
-            {% if full_name %}
-              {% with first_initial=full_name|slice:":1" last_initial=full_name|slice:" " %}
-                <span>{{ first_initial|upper }}{{ last_initial|slice:":1"|upper }}</span>
-              {% endwith %}
-            {% else %}
-              <span>{{ user.username|slice:":1"|upper }}</span>
-            {% endif %}
-          {% endwith %}
+          {{ user.first_name|slice:":1" }}{{ user.last_name|slice:":1" }}
         </div>
       {% endif %}
       <span>{{ user.get_full_name|default:user.username }}</span>
